welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: ')' expected but ';' found.
while(!estSurBiscuit(){avance() && nbPas=nbPas+1};
                                                 ^